# merkle.rs

./: Cargo.toml  README.md  build.rs
protobuf/: proof.proto
src/: lib.rs  merkletree.rs  proto.rs  tree.rs
tests/: proto.rs
